Add projects section.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 
         ul {
             margin-top: 4pt;
+            margin-bottom: 0;
+
+            padding-left: 16pt;
+        }
+
+        li {
+            margin: 2pt;
         }
     </style>
 </head>
@@ -165,6 +172,57 @@
                 <p>APPLE</p>
                 <p class="bold sec-title">Swift student challenge</p>
                 <p class="sec-title">- 2020</p>
+            </div>
+        </div>
+
+        <div class="large-sec">
+            <h3 class="accent-color">Projects</h3>
+            <div class="sep"></div>
+
+            <div class="resume-item">
+                <div class="description">
+                    <p class="sec-title bold">DODO Pizza Widget</p>
+                    <p>- 2020</p>
+                </div>
+                <ul>
+                    <li>Designed and developed an iOS widget in different sizes</li>
+                </ul>
+            </div>
+
+            <div class="resume-item">
+                <div class="description">
+                    <p class="sec-title bold">Grandscore</p>
+                    <p>- 2019</p>
+                </div>
+                <ul>
+                    <li>Developed the UX flow and POC iOS app</li>
+                    <li>Developed NodeJS backend API</li>
+                </ul>
+            </div>
+
+            <div class="resume-item">
+                <div class="description">
+                    <p class="sec-title bold">FEFU Feedback Bot</p>
+                    <p>- 2021 - Present</p>
+                </div>
+                <ul>
+                    <li>Developed Telegram bot for creating feedback about different places</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="large-sec">
+            <h3 class="accent-color">Projects</h3>
+            <div class="sep"></div>
+
+            <div class="resume-item">
+                <div class="description">
+                    <p class="sec-title bold">DODO Pizza Widget</p>
+                    <p>- 2020</p>
+                </div>
+                <ul>
+                    <li>Designed and developed an iOS widget in different sizes</li>
+                </ul>
             </div>
         </div>
     </div>
