Create projects page.

--- a/resume.html
+++ b/resume.html
@@ -3,72 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Roman Esin Resume</title>
-    <style>
-        * {
-            font-family: sans-serif;
-            color: #414141;
-        }
-
-        main {
-
-        }
-
-        .sep {
-            border-top: 2px solid #226082;
-        }
-
-        .accent-color {
-            color: #226082;
-        }
-
-        h3 {
-            text-transform: uppercase;
-        }
-
-        p {
-            display: inline;
-        }
-
-        .padded {
-            padding: 8pt;
-        }
-
-        .sec-title {
-            display: inline;
-            text-transform: uppercase;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        .description {
-            padding-top: 12pt;
-        }
-
-        .items {
-            padding-top: 8pt;
-        }
-
-        .resume-item {
-
-        }
-
-        .large-sec {
-            padding-top: 20pt;
-        }
-
-        ul {
-            margin-top: 4pt;
-            margin-bottom: 0;
-
-            padding-left: 16pt;
-        }
-
-        li {
-            margin: 2pt;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/resume.css">
 </head>
 <body>
     <div class="main">
