Added navabar. Added awards section.

--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <title>Roman Esin Resume</title>
     <link rel="stylesheet" href="styles/resume.css">
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
     <div class="main">
+
+        <div class="nav-bar">
+            <h2 class="inline">
+                <a href="projects.html">
+                    Project overview
+                </a>
+            </h2>
+
+            <h2 class="inline">
+                <a class="nav-button" href="resume.html">
+                    My Resume
+                </a>
+            </h2>
+        </div>
+
         <div style="text-align: center">
             <h1 class="title accent-color">Roman Esin</h1>
             <div class="sep"></div>
