--- a/projects.html
+++ b/projects.html
@@ -4,55 +4,80 @@
     <meta charset="UTF-8">
     <title>Projects</title>
     <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
     <div class="main">
-        <a href="resume.html">
-            <h1 class="resume">Resume</h1>
-        </a>
+        <div class="nav-bar">
+            <h2 class="inline">
+                <a href="projects.html">
+                    Project overview
+                </a>
+            </h2>
 
-        <div class="project">
-            <p class="p-title inline">FEFU Feedback Bot</p>
-            <p class="p-description">A telegram bot to create and respond to feedbacks</p>
-            <img class="inline image" src="images/feedback/IMG_4670.PNG" alt="PodsUI Project Page">
-            <img class="inline image" src="images/feedback/IMG_4671.PNG" alt="PodsUI Project Page">
-            <img class="inline image" src="images/feedback/IMG_4672.PNG" alt="PodsUI Project Page">
+            <h2 class="inline">
+                <a class="nav-button" href="resume.html">
+                    My Resume
+                </a>
+            </h2>
         </div>
 
-        <div class="sep"></div>
+        <h1 style="padding-left: 16pt">Awards</h1>
 
         <div class="project">
-            <a class="link" target="_blank" href="https://github.com/RomanEsin/PodsUI">
-                <p class="p-title inline">PodsUI</p>
-                <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
-            </a>
-            <p class="p-description">A simple mac app to manage your cocoapods</p>
-            <img class="no-shadow inline image" src="images/podsui/generate.png" alt="PodsUI Project Page">
-            <img class="no-shadow inline image" src="images/podsui/project.png" alt="PodsUI Project Page">
+            <div class="project-content">
+                <p class="p-title inline">2x WWDC Scholarship</p>
+                <p class="p-description">I won Apple's WWDC Scholarship 2 times. In 2019 and 2020</p>
+                <img class="inline image" src="images/wwdc/IMG_5895.jpg" alt="PodsUI Project Page">
+                <img class="inline image" src="images/wwdc/IMG_5807.JPG" alt="PodsUI Project Page">
+            </div>
         </div>
 
-        <div class="sep"></div>
+<!--        <a href="resume.html">-->
+        <h1 style="padding-left: 16pt">Projects</h1>
+<!--        </a>-->
 
         <div class="project">
-            <a class="link" target="_blank" href="https://github.com/RomanEsin">
+            <div class="project-content">
+                <p class="p-title inline">FEFU Feedback Bot</p>
+                <p class="p-description">A telegram bot to create and respond to feedbacks</p>
+                <img class="inline image" src="images/feedback/IMG_4670.PNG" alt="PodsUI Project Page">
+                <img class="inline image" src="images/feedback/IMG_4671.PNG" alt="PodsUI Project Page">
+                <img class="inline image" src="images/feedback/IMG_4672.PNG" alt="PodsUI Project Page">
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-content">
                 <p class="p-title inline">Poseidon</p>
-                <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
-            </a>
-            <p class="p-description">An iOS app for reserving landry washing for certain time. Developed for the FEFU University</p>
-            <img class="inline image" src="images/poseidon/IMG_4668.PNG" alt="Poseidon1">
-            <img class="inline image" src="images/poseidon/IMG_4669.PNG" alt="Poseidon2">
-            <img class="inline image" src="images/poseidon/IMG_4666.PNG" alt="Poseidon3">
+                <p class="p-description">An iOS app for reserving landry washing for certain time. Developed for the FEFU University</p>
+                <img class="inline image" src="images/poseidon/IMG_4668.PNG" alt="Poseidon1">
+                <img class="inline image" src="images/poseidon/IMG_4669.PNG" alt="Poseidon2">
+                <img class="inline image" src="images/poseidon/IMG_4666.PNG" alt="Poseidon3">
+            </div>
         </div>
 
-        <div class="sep"></div>
+        <div class="project">
+            <div class="project-content">
+                <a class="link" target="_blank" href="https://github.com/RomanEsin/PodsUI">
+                    <p class="p-title inline">PodsUI</p>
+                    <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
+                </a>
+                <p class="p-description">A simple mac app to manage your cocoapods</p>
+                <img class="no-shadow inline image" src="images/podsui/generate.png" alt="PodsUI Project Page">
+                <img class="no-shadow inline image" src="images/podsui/project.png" alt="PodsUI Project Page">
+            </div>
+        </div>
 
         <div class="project">
-            <a class="link" target="_blank" href="https://github.com/RomanEsin">
-                <p class="p-title inline">Dodo Pizza Widget</p>
-                <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
-            </a>
-            <p class="p-description">An iOS widget to help you see new offers and sales from the Dodo pizza website.</p>
-            <img class="inline image" src="images/dodo/preview1.jpeg" alt="Dodo Pizza Widget">
+            <div class="project-content">
+                <a class="link" target="_blank" href="https://github.com/RomanEsin">
+                    <p class="p-title inline">Dodo Pizza Widget</p>
+                    <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
+                </a>
+                <p class="p-description">An iOS widget to help you see new offers and sales from the Dodo pizza website.</p>
+                <img class="inline image" src="images/dodo/preview1.jpeg" alt="Dodo Pizza Widget">
+            </div>
         </div>
     </div>
 </body>
