Add tea images and tea.html.

--- a/projects.html
+++ b/projects.html
@@ -10,13 +10,19 @@
     <div class="main">
         <div class="nav-bar">
             <h2 class="inline">
-                <a href="projects.html">
+                <a class="nav-button" href="projects.html">
+                    Tea stuff
+                </a>
+            </h2>
+
+            <h2 class="inline">
+                <a class="nav-button" href="projects.html">
                     Project overview
                 </a>
             </h2>
 
             <h2 class="inline">
-                <a class="nav-button" href="resume.html">
+                <a class="nav-button" href="tea.html">
                     My Resume
                 </a>
             </h2>
@@ -33,9 +39,7 @@
             </div>
         </div>
 
-<!--        <a href="resume.html">-->
         <h1 style="padding-left: 16pt">Projects</h1>
-<!--        </a>-->
 
         <div class="project">
             <div class="project-content">
