--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="nav-bar">
             <h2 class="inline">
-                <a class="nav-button" href="projects.html">
+                <a class="nav-button" href="tea.html">
                     Tea stuff
                 </a>
             </h2>
@@ -22,7 +22,7 @@
             </h2>
 
             <h2 class="inline">
-                <a class="nav-button" href="tea.html">
+                <a class="nav-button" href="resume.html">
                     My Resume
                 </a>
             </h2>
