--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <div class="main">
-
         <div class="nav-bar">
             <h2 class="inline">
-                <a href="projects.html">
+                <a class="nav-button" href="tea.html">
+                    Tea stuff
+                </a>
+            </h2>
+
+            <h2 class="inline">
+                <a class="nav-button" href="projects.html">
                     Project overview
                 </a>
             </h2>
