--- a/tea.html
+++ b/tea.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Tea Collection</title>
+    <link rel="stylesheet" href="styles/tea.css">
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
+    <div class="main">
+        <div class="nav-bar">
+            <h2 class="inline">
+                <a class="nav-button" href="tea.html">
+                    Tea stuff
+                </a>
+            </h2>
 
+            <h2 class="inline">
+                <a class="nav-button" href="projects.html">
+                    Project overview
+                </a>
+            </h2>
+
+            <h2 class="inline">
+                <a class="nav-button" href="resume.html">
+                    My Resume
+                </a>
+            </h2>
+        </div>
+
+        <h1 class="centered">My tea collection</h1>
+    </div>
 </body>
 </html>
