--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
+    <div class="nav-bar">
+        <h2 class="inline">
+            <a class="nav-button" href="tea.html">
+                Tea stuff
+            </a>
+        </h2>
+
+        <h2 class="inline">
+            <a class="nav-button" href="projects.html">
+                Project overview
+            </a>
+        </h2>
+
+        <h2 class="inline">
+            <a class="nav-button" href="resume.html">
+                My Resume
+            </a>
+        </h2>
+    </div>
 </body>
 </html>
