Add tea images.

--- a/tea.html
+++ b/tea.html
@@ -29,6 +29,16 @@
         </div>
 
         <h1 class="centered">My tea collection</h1>
+
+        <div>
+            <img class="image" src="images/tea/IMG_4676.JPG">
+
+            <img class="image" src="images/tea/IMG_4677.JPG">
+
+            <img class="image" src="images/tea/IMG_4678.JPG">
+
+            <img class="image" src="images/tea/IMG_4679.JPG">
+        </div>
     </div>
 </body>
 </html>
