--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Roman Esin Resume</title>
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/resume.css">
     <link rel="stylesheet" href="styles/nav.css">
 </head>
