--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
