--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Projects</title>
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/projects.css">
     <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
+<div class="wrapper">
     <div class="main">
         <div class="nav-bar">
             <h2 class="inline">
@@ -28,23 +30,23 @@
             </h2>
         </div>
 
-        <h1 style="padding-left: 16pt">Awards</h1>
+        <h1 class="main-header">Awards</h1>
 
         <div class="project">
             <div class="project-content">
-                <p class="p-title inline">2x WWDC Scholarship</p>
+                <h2 class="p-title inline">2x WWDC Scholarship</h2>
                 <p class="p-description">I won Apple's WWDC Scholarship 2 times. In 2019 and 2020</p>
                 <img class="inline image" src="images/wwdc/IMG_5895.jpg" alt="PodsUI Project Page">
                 <img class="inline image" src="images/wwdc/IMG_5807.JPG" alt="PodsUI Project Page">
             </div>
         </div>
 
-        <h1 style="padding-left: 16pt">Projects</h1>
+        <h1 class="main-header">Projects</h1>
 
         <div class="project">
             <div class="project-content">
-                <p class="p-title inline">FEFU Feedback Bot</p>
-                <p class="p-description">A telegram bot to create and respond to feedbacks</p>
+                <h2 class="p-title inline">FEFU Feedback Bot</h2>
+                <span class="p-description">A telegram bot to create and respond to feedbacks</span>
                 <img class="inline image" src="images/feedback/IMG_4670.PNG" alt="PodsUI Project Page">
                 <img class="inline image" src="images/feedback/IMG_4671.PNG" alt="PodsUI Project Page">
                 <img class="inline image" src="images/feedback/IMG_4672.PNG" alt="PodsUI Project Page">
@@ -53,8 +55,8 @@
 
         <div class="project">
             <div class="project-content">
-                <p class="p-title inline">Poseidon</p>
-                <p class="p-description">An iOS app for reserving landry washing for certain time. Developed for the FEFU University</p>
+                <h2 class="p-title inline">Poseidon</h2>
+                <span class="p-description">An iOS app for reserving landry washing for certain time. Developed for the FEFU University</span>
                 <img class="inline image" src="images/poseidon/IMG_4668.PNG" alt="Poseidon1">
                 <img class="inline image" src="images/poseidon/IMG_4669.PNG" alt="Poseidon2">
                 <img class="inline image" src="images/poseidon/IMG_4666.PNG" alt="Poseidon3">
@@ -64,10 +66,10 @@
         <div class="project">
             <div class="project-content">
                 <a class="link" target="_blank" href="https://github.com/RomanEsin/PodsUI">
-                    <p class="p-title inline">PodsUI</p>
+                    <h2 class="p-title inline">PodsUI</h2>
                     <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
                 </a>
-                <p class="p-description">A simple mac app to manage your cocoapods</p>
+                <span class="p-description">A simple mac app to manage your cocoapods</span>
                 <img class="no-shadow inline image" src="images/podsui/generate.png" alt="PodsUI Project Page">
                 <img class="no-shadow inline image" src="images/podsui/project.png" alt="PodsUI Project Page">
             </div>
@@ -76,13 +78,15 @@
         <div class="project">
             <div class="project-content">
                 <a class="link" target="_blank" href="https://github.com/RomanEsin">
-                    <p class="p-title inline">Dodo Pizza Widget</p>
+                    <h2 class="p-title inline">Dodo Pizza Widget</h2>
                     <img class="inline" src="images/icons/link.svg" alt="Link" width="30pt" height="30pt">
                 </a>
-                <p class="p-description">An iOS widget to help you see new offers and sales from the Dodo pizza website.</p>
+                <span class="p-description">An iOS widget to help you see new offers and sales from the Dodo pizza website.</span>
                 <img class="inline image" src="images/dodo/preview1.jpeg" alt="Dodo Pizza Widget">
             </div>
         </div>
     </div>
+</div>
+
 </body>
 </html>
