--- a/tea.html
+++ b/tea.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tea Collection</title>
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/tea.css">
     <link rel="stylesheet" href="styles/nav.css">
 </head>
@@ -30,14 +31,38 @@
 
         <h1 class="centered">My tea collection</h1>
 
-        <div>
-            <img class="image" src="images/tea/IMG_4676.JPG">
+        <div class="teas">
+            <div class="tea-wrapper">
+                <div class="tea-item">
+                    <h1 class="rating">❌</h1>
+                    <img class="image" src="images/tea/IMG_4676.JPG">
+                    <h2>Title</h2>
+                    <h3>Description</h3>
+                </div>
 
-            <img class="image" src="images/tea/IMG_4677.JPG">
+                <div class="tea-item">
+                    <h1 class="rating">✅</h1>
+                    <img class="image" src="images/tea/IMG_4677.JPG">
+                    <h2>Title</h2>
+                    <h3>Description</h3>
+                </div>
+            </div>
 
-            <img class="image" src="images/tea/IMG_4678.JPG">
+            <div class="tea-wrapper">
+                <div class="tea-item">
+                    <h1 class="rating">❌</h1>
+                    <img class="image" src="images/tea/IMG_4678.JPG">
+                    <h2>Title</h2>
+                    <h3>Description</h3>
+                </div>
 
-            <img class="image" src="images/tea/IMG_4679.JPG">
+                <div class="tea-item">
+                    <h1 class="rating">✅</h1>
+                    <img class="image" src="images/tea/IMG_4679.JPG">
+                    <h2>Title</h2>
+                    <h3>Description</h3>
+                </div>
+            </div>
         </div>
     </div>
 </body>
