--- a/tea.html
+++ b/tea.html
@@ -34,33 +34,33 @@
         <div class="teas">
             <div class="tea-wrapper">
                 <div class="tea-item">
-                    <h1 class="rating">❌</h1>
+                    <h1 class="rating">✅</h1>
                     <img class="image" src="images/tea/IMG_4676.JPG">
-                    <h2>Title</h2>
-                    <h3>Description</h3>
+                    <h2>Гавайский коктейль</h2>
+                    <h3>Гибискус, Ананас, манго, Папайя, Цветки Мальвы</h3>
                 </div>
 
                 <div class="tea-item">
-                    <h1 class="rating">✅</h1>
+                    <h1 class="rating">❌</h1>
                     <img class="image" src="images/tea/IMG_4677.JPG">
-                    <h2>Title</h2>
-                    <h3>Description</h3>
+                    <h2>Яблочный штрудель</h2>
+                    <h3>Черный цейлонский и индийский чай, Яблоко, Корица, Сладкая Стевия, Бадьян</h3>
                 </div>
             </div>
 
             <div class="tea-wrapper">
                 <div class="tea-item">
-                    <h1 class="rating">❌</h1>
+                    <h1 class="rating">✅</h1>
                     <img class="image" src="images/tea/IMG_4678.JPG">
-                    <h2>Title</h2>
-                    <h3>Description</h3>
+                    <h2>Черный чай Tess</h2>
+                    <h3>Черный чай, Яблоко, Шиповник</h3>
                 </div>
 
                 <div class="tea-item">
-                    <h1 class="rating">✅</h1>
+                    <h1 class="rating">❌</h1>
                     <img class="image" src="images/tea/IMG_4679.JPG">
-                    <h2>Title</h2>
-                    <h3>Description</h3>
+                    <h2>Чай Императора</h2>
+                    <h3>Ягоды и Фрукты</h3>
                 </div>
             </div>
         </div>
