Add about me page

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,14 @@
             </h2>
         </div>
 
+        <h1 class="main-header">About me</h1>
+
+        <div class="project">
+            <div class="project-content">
+                <p class="p-description">I'm a passionate iOS developer. I build apps and build services for making people's lifes better.</p>
+            </div>
+        </div>
+
         <h1 class="main-header">Awards</h1>
 
         <div class="project">
